# STTS-TEST

./: .gitignore  .gitmodules  .replit  MODELS.md  README.md  app.json  eas.json  package-lock.json  package.json  replit.md  tsconfig.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
app/: _layout.tsx  index.tsx
modules/piper-module/: expo-module.config.json  expo-plugin.js  package.json
modules/piper-module/android/: build.gradle
modules/piper-module/android/src/main/cpp/: CMakeLists.txt  espeak_jni.cpp
modules/piper-module/src/: index.ts
modules/tesseract-module/: expo-module.config.json  expo-plugin.js  package.json
modules/tesseract-module/android/: build.gradle
modules/tesseract-module/src/: index.ts
modules/vosk-module/: expo-module.config.json  expo-plugin.js  package.json
modules/vosk-module/android/: build.gradle
modules/vosk-module/src/: index.ts
src/features/ocr/: ocr-session.ts  tesseract-bridge.ts  useOcr.ts
src/features/ocr/__tests__/: ocr-session.test.ts
src/features/settings/: settings-service.ts
src/features/settings/__tests__/: settings-service.test.ts
src/features/stt/: silence-trimmer.ts  stt-session.ts  useStt.ts  vosk-bridge.ts
src/features/tts/: piper-bridge.ts  playback-queue.ts  tts-service.ts  useTts.ts  wav-concatenator.ts
src/features/ui/: AudioBar.tsx  FloatingBubble.tsx  HistoryPanel.tsx  MainPanel.tsx
src/shared/services/: app-init.ts  model-assets.ts  panel-state.ts  retention-rule.ts  storage-quota.ts
src/shared/utils/: language-tokenizer.ts
(+16 files in other folders)
